Fixed SVG rendering issue on Safari
Fixed the SVG rendering in the wrong position in Safari by adding code that adds a width and height attribute to the inline SVG if the browser is safari

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "K2D", "Raleway", "Helvetica", "Arial", sans-serif;
 }
 
 /* BODY */
@@ -30,8 +31,13 @@ body {
 
 .radar-infographic {
     position: relative;
-    font-family: "K2D", "Raleway", "Helvetica", "Arial", sans-serif;
+    max-height: 100vh;
+    overflow: hidden;
     width: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .dot-text {
@@ -178,6 +184,7 @@ svg {
     max-width: 100%;
     max-height: 100vh;
     position: relative;
+    margin: 0;
     left: 0;
     bottom: 0;
 }
@@ -302,7 +309,6 @@ h1 {
     z-index: 10000;
     text-align: center;
     top: 0;
-    
 }
 
 p {
@@ -342,11 +348,9 @@ p {
 .fullscreen-info {
     display: block;
     z-index: 1000;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: absolute;
+    min-height: 100%;
+    width: 100%;
     background-color: rgba(255,255,255);
     text-align: center;
 }
@@ -366,8 +370,8 @@ p {
 .info-box {
     background-color: rgba(255,255,255);
     height: auto;
+    position: block;
     width: 65vw;
-    max-height: 90vh;
     padding: 10%;
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
@@ -387,22 +391,22 @@ p {
     border-radius: 0;
     border: none;
     background-color: #000;
+    border-radius: 5px;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
     padding-left: 4%;
     padding-right: 4%;
-    margin-top: 10px;
     font-size: 18px;
     color: #FFF;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     font-weight: 400;
+    text-decoration: none;
     transition: color 1s, background-color 0.5s, box-shadow 0.5s;
 }
 
 .read-more:hover {
-    box-shadow: inset 0px 0px 0px 4px #000;
+    box-shadow: inset 0px 0px 0px 3px #000;
     box-sizing: border-box;
-
     color: #000;
     box-sizing: border-box;
     background-color: #FFF;
